Sync with 6.8.2 branch: Bug #591     (https://bugs.freedesktop.org/show_bug.cgi?id=591) attachment #308     (https://bugs.freedesktop.org/attachment.cgi?id=308): Fix video timing     problems with Sony PCG-C1VN Vaio Picturebook notebook && co. Patch by     Marc Aurele La France